--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "three": "^0.175.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.99.9"
   },
   "scripts": {
     "start": "react-scripts start",
