--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^7.0.3",
-    "prisma": "^6.7.0"
+    "prisma": "^6.7.0",
+    "studio": "prisma studio --schema=./prisma/schema.prisma"
   }
 }
