--- a/package.json
+++ b/package.json
@@ -25,7 +25,17 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx --max-warnings 0",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:check": "eslint src --ext .js,.jsx,.ts,.tsx --max-warnings 5",
+    "lint:strict": "eslint src --ext .js,.jsx,.ts,.tsx --max-warnings 0",
+    "lint:warn-only": "eslint src --ext .js,.jsx,.ts,.tsx --quiet",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "precommit": "npm run lint:fix && npm run format",
+    "analyze": "npm run build && npx source-map-explorer 'build/static/js/*.js'",
+    "clean:lint": "rm -rf node_modules/.cache && npm run lint:fix"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.8.0"
   }
 }
