🔧 Fix login process.env issues and authentication flow
- Added environment variables configuration (.env files)
- Fixed 'process is not defined' error in production builds
- Enhanced API configuration with safe environment variable handling
- Improved login response handling for multiple server response formats
- Added better error logging and debugging for authentication
- Fixed ReadingPassage component environment variable access

Resolves login authentication issues and process.env production errors.

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,10 @@
+﻿# API Configuration for production
 REACT_APP_API_URL=https://api.semanami-ai.com/api
 REACT_APP_API_TIMEOUT=60000
+
+# Reading Passage Endpoints
 REACT_APP_READING_TOPIC_ENDPOINT=/reading/generate
 REACT_APP_USAGE_ENDPOINT=/usage/summary
+
+# Environment
+NODE_ENV=production
