--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^7.0.3",
     "prisma": "^6.9.0",
     "studio": "prisma studio --schema=./prisma/schema.prisma"
